tests/ui/feature-gates/feature-gate-abi-avr-interrupt.stderr
error[E0658]: the extern "avr-non-blocking-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:13:8
   |
LL | extern "avr-non-blocking-interrupt" fn fu() {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:15:8
   |
LL | extern "avr-interrupt" fn f() {}
   |        ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:19:12
   |
LL |     extern "avr-interrupt" fn m();
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-non-blocking-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:21:12
   |
LL |     extern "avr-non-blocking-interrupt" fn mu();
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:24:12
   |
LL |     extern "avr-interrupt" fn dm() {}
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-non-blocking-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:26:12
   |
LL |     extern "avr-non-blocking-interrupt" fn dmu() {}
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:32:12
   |
LL |     extern "avr-interrupt" fn m() {}
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-non-blocking-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:34:12
   |
LL |     extern "avr-non-blocking-interrupt" fn mu() {}
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:39:12
   |
LL |     extern "avr-interrupt" fn im() {}
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-non-blocking-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:41:12
   |
LL |     extern "avr-non-blocking-interrupt" fn imu() {}
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:45:18
   |
LL | type TA = extern "avr-interrupt" fn();
   |                  ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-non-blocking-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:47:19
   |
LL | type TAU = extern "avr-non-blocking-interrupt" fn();
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:50:8
   |
LL | extern "avr-interrupt" {}
   |        ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "avr-non-blocking-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:52:8
   |
LL | extern "avr-non-blocking-interrupt" {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0658`.
